# ros_to_markdown

./: .coveragerc  .cursornotes  .cursorrules  .cursorscratchpad  .dockerignore  .gitignore  .ruff.toml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  workflow.yml
docker/: Dockerfile.ros1  Dockerfile.ros2-humble  Dockerfile.ros2-iron  Dockerfile.ros2-jazzy
docker/data/ros1_ws/src/action_server/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/action_server/scripts/: move_to_goal.py
docker/data/ros1_ws/src/data_processing/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/data_processing/msg/: FilteredData.msg
docker/data/ros1_ws/src/data_processing/scripts/: data_filter.py  data_processor.py
docker/data/ros1_ws/src/environment_integration/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/environment_integration/msg/: EnvironmentData.msg
docker/data/ros1_ws/src/environment_integration/scripts/: environment_builder.py
docker/data/ros1_ws/src/robot_control/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/robot_control/scripts/: move_robot.py
docker/data/ros1_ws/src/sensor_data/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/sensor_data/launch/: main_system.launch
docker/data/ros1_ws/src/sensor_data/scripts/: humidity_publisher.py  temperature_publisher.py
docker/data/ros1_ws/src/tricky_scenarios/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/tricky_scenarios/scripts/: conflicting_publishers.py  delayed_response.py
docker/data/ros1_ws/src/tricky_scenarios/srv/: GetLatestReadings.srv
docker/data/ros1_ws/src/user_interface/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/user_interface/scripts/: command_listener.py
docker/data/ros1_ws/src/visualization/: CMakeLists.txt  package.xml
docker/data/ros1_ws/src/visualization/scripts/: visualize_data.py
docker/data/ros2_ws/src/action_server/: CMakeLists.txt  package.xml  setup.py
docker/data/ros2_ws/src/action_server/action/: MoveToGoal.action
docker/data/ros2_ws/src/action_server/action_server/: move_to_goal.py
docker/data/ros2_ws/src/action_server/scripts/: move_to_goal.py
docker/data/ros2_ws/src/data_processing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker/data/ros2_ws/src/data_processing/msg/: FilteredData.msg
docker/data/ros2_ws/src/data_processing/scripts/: data_filter  data_filter.py  data_processor  data_processor.py
docker/data/ros2_ws/src/environment_integration/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker/data/ros2_ws/src/environment_integration/environment_integration/: environment_builder.py
docker/data/ros2_ws/src/environment_integration/msg/: EnvironmentData.msg
docker/data/ros2_ws/src/environment_integration/scripts/: environment_builder  environment_builder.py
docker/data/ros2_ws/src/robot_control/: CMakeLists.txt  package.xml  setup.py
docker/data/ros2_ws/src/robot_control/robot_control/: move_robot.py
docker/data/ros2_ws/src/robot_control/scripts/: move_robot.py  setup.py
docker/data/ros2_ws/src/sensor_data/: CMakeLists.txt  package.xml  setup.py
docker/data/ros2_ws/src/sensor_data/launch/: complete_system.launch.py  main_system.launch.py  main_system_launch.py  sensors_only.launch.py
docker/data/ros2_ws/src/sensor_data/scripts/: humidity_publisher.py  temperature_publisher.py
docker/data/ros2_ws/src/sensor_data/sensor_data/: humidity_sensor.py  temperature_sensor.py
docker/data/ros2_ws/src/tricky_scenarios/: package.xml  setup.py
docker/data/ros2_ws/src/tricky_scenarios/scripts/: conflicting_publishers.py  delayed_response.py
docker/data/ros2_ws/src/tricky_scenarios/srv/: GetLatestReadings.srv
docker/data/ros2_ws/src/user_interface/: package.xml  setup.py
docker/data/ros2_ws/src/user_interface/scripts/: command_listener.py
docker/data/ros2_ws/src/visualization/: package.xml  setup.py
docker/data/ros2_ws/src/visualization/scripts/: visualize_data.py
docker/entrypoints/: ros1-entrypoint.sh  ros2-entrypoint.sh
docker/scripts/: build.sh  cleanup-docker.sh  launch-ros1-test-env.sh  launch-ros2-test-env.sh  ros2-entrypoint.sh  ros2-jazzy-entrypoint.sh  ros2-rolling-entrypoint.sh  run-in-docker.sh  test-all-distros.sh
docs/: development.md  docker.md  testing.md
docs/mvp/: design_decisions.md  mvp.md  mvp_specification.md  perspectives.md
examples/: basic_runtime.md
prompts/: meta_updates
scripts/: analyze_ros2_graph.py  analyze_ros_graph.py  check.sh  docker-manager.sh  launch_turtlesim.py  run-integration-tests.sh  run-tests.sh  test-manager.sh
scripts/utils/: analyze_ros_graph.py  create_workspace.py  launch-ros1-test-env.sh  launch-ros2-test-env.sh  launch_turtlesim.py
src/ros_to_markdown/: __init__.py  cli.py  logging.py
src/ros_to_markdown/analysis/: factory.py  interfaces.py  ros2.py
src/ros_to_markdown/analyzers/: __init__.py  base.py  ros1.py  ros2.py
src/ros_to_markdown/config/: __init__.py  cli.py  environment.py  schema.py
src/ros_to_markdown/core/: ros_detector.py
src/ros_to_markdown/models/: ros_components.py
src/ros_to_markdown/perspectives/: __init__.py  engine.py  loader.py  models.py  registry.py  stage.py
src/ros_to_markdown/perspectives/stages/: __init__.py  collect.py  render.py  transform.py
src/ros_to_markdown/utils/: env_manager.py  graph_filters.py
tests/: conftest.py  test_basic.py
tests/core/: test_analyzers.py  test_ros_components.py  test_ros_detector.py
tests/helpers/: docker_test_runner.py  ros_test_env.py
tests/integration/: conftest.py  test_basic_perspective.py  test_workspace_detection.py
tests/test_helpers/: docker_test_runner.py  docker_utils.py  ros_test_env.py
tests/unit/: test_cli.py  test_logging.py
tests/unit/config/: test_environment.py  test_schema.py
tests/unit/perspectives/: test_engine.py  test_loader.py  test_models.py  test_registry.py  test_render.py  test_transform.py
