[project]
name = "ros_to_markdown"
version = "0.1.0"
description = "Convert ROS systems to Markdown for LLM processing"
authors = [
    { name = "Rob Royce", email = "rob.royce@jpl.nasa.gov" }
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "pyyaml>=5.3.1",
]
readme = "README.md"
license = { text = "Apache 2.0" }

[project.optional-dependencies]
ros1 = [
    "rospy",
    "rospkg>=1.5.0",
    "catkin-tools>=0.9.0",
]
ros2 = [
    "rclpy",
    "ament-package>=0.14.0",
    "ros2cli>=0.18.0",
]
dev = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.290",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ros_to_markdown"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=ros_to_markdown"
