<package format="2">
  <name>visualization</name>
  <version>0.0.0</version>
  <description>Visualize processed data in logs or simple output</description>
  <maintainer email="you@todo.todo">YourName</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
</package>
